# test

mid-technical-test/: Customer.postman_collection.json  Dockerfile  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
mid-technical-test/reports/: coverage.xml  unittest_report.xml
mid-technical-test/src/: main.py
mid-technical-test/src/api/: routers.py
mid-technical-test/src/api/healthcheck/: endpoints.py  schemas.py
mid-technical-test/src/api/healthcheck/tests/: test_endpoints.py
mid-technical-test/src/api/v1/costumers/: crud.py  endpoints.py
mid-technical-test/src/api/v1/costumers/tests/: test_crud.py  test_endpoints.py
mid-technical-test/src/api/v1/loans/: crud.py  endpoints.py
mid-technical-test/src/api/v1/loans/tests/: test.crud.py  test_endpoints.py
mid-technical-test/src/core/middlewares/: catcher.py  trailing_slash.py
mid-technical-test/src/core/settings/: __init__.py  base.py
mid-technical-test/src/core/utils/: datetime.py  exceptions.py  responses.py  validations.py
mid-technical-test/src/db/: session.py  utils.py
mid-technical-test/src/db/models/: base.py  models.py
